--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -20,3 +20,12 @@
     /* height: 100%; */
     overflow: auto;
   }
+
+  .center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
