--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 .App {
   text-align: center;
+  background-color: #272b4d;
+
+  /* Below selects the entire screen */
+  /* Height and width fallback for older browsers. */
+  height: 100%;
+  width: 100%;
+  /* Set the height/width to match that of the viewport. */
+  height: 100vh;
+  width: 100vw;
+  /* Remove any browser-default margins. */
+  margin: 0;
+
+  overflow: auto;
 }
+
 
 .App-logo {
   height: 40vmin;
