--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -36,6 +36,7 @@
 
 .section .title {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: large;
     font-weight: bold;
     /* background-color: rgb(137, 192, 255); */
     text-align: left;
@@ -46,5 +47,11 @@
   /* Section description */
 .section .descr {
     font-family: Verdana, Geneva, Tahoma, sans-serif;    font-style: italic;
+    padding: 5px 8px;
+}
+
+/* Section tags */
+.section .tags {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;    font-style: normal;
     padding: 5px 8px;
 }
